[CSS] fixed animated text flickering

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 .text {
     width: 100%;
-    height: 40px;
+    height: 50px; /* This is the cursor flicker position */
     text-align: center;
     white-space: nowrap;
     overflow: hidden;
